# quanires

./: Cargo.toml  flake.nix
src/: main.rs
src/utils/: menus.rs  mod.rs  mpv.rs  scraper.rs  tracker.rs
