[package]
name = "quanires"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
base64 = { version = "0.22.1", features = ["alloc", "std"] }
dirs = "5.0.1"
promptuity = "0.0.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["cookies", "json", "rustls-tls"] }
rustc-hash = "2.0.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
urlencoding = "2.1.3"
which = "6.0.3"
